pod-security/baseline/disallow-host-process/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01-new
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: false
  - name: busybox02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02-new
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03-new
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: false
  - name: busybox02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04-new
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: false
---
